--- a/logDisplayWebApp/templates/iterAndDutLogs.html
+++ b/logDisplayWebApp/templates/iterAndDutLogs.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,150 +12,187 @@
 </head>
 
 <body>
-{% include "navigation_bar.html" %}
+    {% include "navigation_bar.html" %}
 
     <!-- Table to display data -->
     <center>
         <h1>Summary of Executions</h1>
-        <div class="table-container">
-            <div id="basic-device-info" class="scrollable-table">
-                <table class="basic-info-table">
-                    <thead>
-                       <tr>
-                           <th id="basic_info_title" scope="col" colspan="2">
-                               Device Basic Information
-                           </th>
-                       </tr>
-                    </thead>
-                <tbody>
-                    {%for dev_data in summary["device_basic_information"]%}
-                        <tr>
-                            <td>{{dev_data.upper()}}</td>
-                            <td>{{ summary["device_basic_information"][dev_data] }}</td>
-                        </tr>
-                    {%endfor%}
-                </tbody>
-                </table>
+            <div class="table-container">
+                <div id="basic-device-info" class="scrollable-table">
+                    <table class=" table basic-info-table table-hover">
+                        <thead>
+                            <tr>
+                                <th id="basic_info_title" scope="col" colspan="2">
+                                    Device Basic Information
+                                </th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            {%for dev_data in summary["device_basic_information"]%}
+                            <tr>
+                                <td>{{dev_data.upper()}}</td>
+                                <td>{{ summary["device_basic_information"][dev_data] }}</td>
+                            </tr>
+                            {%endfor%}
+                        </tbody>
+                    </table>
+                </div>
+                <div id="summary-table" class="scrollable-table">
+                    <table class="table summary-table table-hover">
+                        <thead>
+                            <tr>
+                                <th id="title" scope="col" colspan="2">
+                                    Summary Table
+                                </th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>Total Executions</td>
+                                <td>{{ summary["number_of_iterations"] }}</td>
+                            </tr>
+                            <tr>
+                                <td>Successful Executions</td>
+                                <td>{{ summary["Pass Count"] }}</td>
+                            </tr>
+                            <tr>
+                                <td>Failed Executions</td>
+                                <td>{{ summary["Fail Count"]["Count"] }}</td>
+                            </tr>
+                            <tr>
+                                <td>DUT Platform</td>
+                                <td>{{ summary["platform"] }}</td>
+                            </tr>
+                            <tr>
+                                <td>Commissioning Method</td>
+                                <td>{{ summary["commissioning_method"] }}</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
             </div>
-            <div id="summary-table" class="scrollable-table">
-                <table class="summary-table">
-            <thead>
-               <tr>
-                   <th id="title" scope="col" colspan="2">
-                       Summary Table
-                   </th>
-               </tr>
-            </thead>
-            <tbody>
-            <tr>
-                <td>Total Executions</td>
-                <td>{{ summary["number_of_iterations"] }}</td>
-            </tr>
-            <tr>
-                <td>Successful Executions</td>
-                <td>{{ summary["Pass Count"] }}</td>
-            </tr>
-            <tr>
-                <td>Failed Executions</td>
-                <td>{{ summary["Fail Count"]["Count"] }}</td>
-            </tr>
-            <tr>
-                <td>DUT Platform</td>
-                <td>{{ summary["platform"] }}</td>
-            </tr>
-            <tr>
-                <td>Commissioning Method</td>
-                <td>{{ summary["commissioning_method"] }}</td>
-            </tr>
-            </tbody>
-        </table>
-            </div>
-        </div>
+        
         <br>
-    <div class="btn-group">
-    <button type="button" class="btn btn-secondary">Table Rows</button>
-      <button type="button" class="btn btn-secondary dropdown-toggle dropdown-toggle-split" data-bs-toggle="dropdown" aria-expanded="false">
-        <span class="visually-hidden">Toggle Dropdown</span>
-      </button>
-      <ul class="dropdown-menu" onchange="location = this.value;">
-        <li><a class="dropdown-item" href="?page={{current_page}}&page_size=10&filters={{ current_filter }}&dir_path={{dir_path}}">10</a></li>
-        <li><a class="dropdown-item" href="?page={{current_page}}&page_size=20&filters={{ current_filter }}&dir_path={{dir_path}}">20</a></li>
-        <li><a class="dropdown-item" href="?page={{current_page}}&page_size=50&filters={{ current_filter }}&dir_path={{dir_path}}">50</a></li>
-        <li><a class="dropdown-item" href="?page={{current_page}}&page_size=100&filters={{ current_filter }}&dir_path={{dir_path}}">100</a></li>
-      </ul>
-    </div>
-    <div class="btn-group">
-      <button type="button" class="btn btn-secondary">Filter By</button>
-      <button type="button" class="btn btn-secondary dropdown-toggle dropdown-toggle-split" data-bs-toggle="dropdown" aria-expanded="false">
-        <span class="visually-hidden">Toggle Dropdown</span>
-      </button>
-      <ul class="dropdown-menu" onchange="location = this.value;">
-        <li><a class="dropdown-item" href="?page={{current_page}}&page_size={{ current_page_size }}&filters=all&dir_path={{dir_path}}">All</a></li>
-        <li><a class="dropdown-item" href="?page={{current_page}}&page_size={{ current_page_size }}&filters=pass&dir_path={{dir_path}}">Pass</a></li>
-        <li><a class="dropdown-item" href="?page={{current_page}}&page_size={{ current_page_size }}&filters=fail&dir_path={{dir_path}}">Fail</a></li>
-      </ul>
-</div>
-<div class="btn-group">
-    <button type="button" class="btn btn-secondary" onclick="lineChart('{{dir_path}}')"> Analytics Graph</button>
-</div>
-    <table class="data-table">
-        <thead>
-            <tr>
-                <th>Iteration Number</th>
-                <th>Test Result</th>
-                <th>Time of Execution</th>
-                <th>Error Reason</th>
-                {% for analytic_para in summary["analytics"] %}
-                    <th>{{analytic_para.upper()}}</th>
-                {% endfor %}
+        <div class="btn-group">
+            <button type="button" class="btn btn-secondary">Table Rows</button>
+            <button type="button" class="btn btn-secondary dropdown-toggle dropdown-toggle-split"
+                data-bs-toggle="dropdown" aria-expanded="false">
+                <span class="visually-hidden">Toggle Dropdown</span>
+            </button>
+            <ul class="dropdown-menu" onchange="location = this.value;">
+                <li><a class="dropdown-item"
+                        href="?page={{current_page}}&page_size=10&filters={{ current_filter }}&dir_path={{dir_path}}">10</a>
+                </li>
+                <li><a class="dropdown-item"
+                        href="?page={{current_page}}&page_size=20&filters={{ current_filter }}&dir_path={{dir_path}}">20</a>
+                </li>
+                <li><a class="dropdown-item"
+                        href="?page={{current_page}}&page_size=50&filters={{ current_filter }}&dir_path={{dir_path}}">50</a>
+                </li>
+                <li><a class="dropdown-item"
+                        href="?page={{current_page}}&page_size=100&filters={{ current_filter }}&dir_path={{dir_path}}">100</a>
+                </li>
+            </ul>
+        </div>
+        <div class="btn-group">
+            <button type="button" class="btn btn-secondary">Filter By</button>
+            <button type="button" class="btn btn-secondary dropdown-toggle dropdown-toggle-split"
+                data-bs-toggle="dropdown" aria-expanded="false">
+                <span class="visually-hidden">Toggle Dropdown</span>
+            </button>
+            <ul class="dropdown-menu" onchange="location = this.value;">
+                <li><a class="dropdown-item"
+                        href="?page={{current_page}}&page_size={{ current_page_size }}&filters=all&dir_path={{dir_path}}">All</a>
+                </li>
+                <li><a class="dropdown-item"
+                        href="?page={{current_page}}&page_size={{ current_page_size }}&filters=pass&dir_path={{dir_path}}">Pass</a>
+                </li>
+                <li><a class="dropdown-item"
+                        href="?page={{current_page}}&page_size={{ current_page_size }}&filters=fail&dir_path={{dir_path}}">Fail</a>
+                </li>
+            </ul>
+        </div>
+        <div class="btn-group">
+            <button type="button" class="btn btn-secondary" onclick="lineChart('{{dir_path}}')"> Analytics
+                Graph</button>
+        </div>
+        <div>
+            <br>
+        </div>
+        <div class="card overflow-x-scroll">
+            <table class="table table-hover overflow-x-scroll">
+                <thead>
+                    <tr>
+                        <th>Iteration Number</th>
+                        <th>Test Result</th>
+                        <th>Time of Execution</th>
+                        <th>Error Reason</th>
+                        {% for analytic_para in summary["analytics"] %}
+                        <th>{{analytic_para.upper()}}</th>
+                        {% endfor %}
 
-                <th>Logs</th>
-            </tr>
-        </thead>
-        <tbody>
-            {% for row in table_data %}
-                <tr>
-                    <td>{{ row.dir_name }}</td>
-                    <td>{{ row.iteration_result }}</td>
-                    <td>{{ row.dir_last_modified }}</td>
-                    <td>{{ 'Not Applicable' if row.iteration_result == 'PASS' else summary["Failed_iteration_details"][row.dir_name] }}</td>
-                    {% for analytic_para in summary["analytics"] %}
-                    <td>{{summary["analytics"][analytic_para][row.dir_name]}}</td>
+                        <th>Logs</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {% for row in table_data %}
+                    <tr>
+                        <td>{{ row.dir_name }}</td>
+                        <td class="{{ 'table-success' if row.iteration_result == 'PASS' else 'table-danger' }}">{{ row.iteration_result }}</td>
+                        <td>{{ row.dir_last_modified }}</td>
+                        <td>
+                            {{ 'Not Applicable' if row.iteration_result == 'PASS' else
+                            summary["Failed_iteration_details"][row.dir_name] }}</td>
+                            {% for analytic_para in summary["analytics"] %}
+                        <td>{{summary["analytics"][analytic_para][row.dir_name]}}</td>
+                        {% endfor %}
+                        <td><button onclick="dutLogsDisplay('{{dir_path}}','{{row.dir_name}}','iter')"
+                                class="btn btn-primary">Iteration Logs</button>
+                            <button onclick="dutLogsDisplay('{{dir_path}}','{{row.dir_name}}','dut')"
+                                class="btn btn-secondary">DUT Logs</button>
+                        </td>
+                    </tr>
                     {% endfor %}
-                    <td><button onclick="dutLogsDisplay('{{dir_path}}','{{row.dir_name}}','iter')" class="btn btn-primary">Iteration Logs</button>
-                        <button onclick="dutLogsDisplay('{{dir_path}}','{{row.dir_name}}','dut')" class="btn btn-secondary">DUT Logs</button>
-                    </td>
-                </tr>
-            {% endfor %}
-        </tbody>
-    </table>
-    <nav aria-label="Page navigation example">
-      <ul class="pagination pagination-sm justify-content-center" items-per-page="10" max-size="10">
-        {% if current_page > 1 %}
-            <li class="page-item">
-                <a class="page-link"  href="?page=1&page_size={{ current_page_size }}&filters={{ current_filter }}&dir_path={{dir_path}}">First</a>
-            </li>
-          <li class="page-item">
-              <a class="page-link"  href="?page={{ current_page - 1 }}&page_size={{ current_page_size }}&filters={{ current_filter }}&dir_path={{dir_path}}">Previous</a>
-          </li>
-        {% endif %}
+                </tbody>
+            </table>
+            <nav aria-label="Page navigation example">
+                <ul class="pagination pagination-sm justify-content-center" items-per-page="10" max-size="10">
+                    {% if current_page > 1 %}
+                    <li class="page-item">
+                        <a class="page-link"
+                            href="?page=1&page_size={{ current_page_size }}&filters={{ current_filter }}&dir_path={{dir_path}}">First</a>
+                    </li>
+                    <li class="page-item">
+                        <a class="page-link " aria-label="Previous"
+                            href="?page={{ current_page - 1 }}&page_size={{ current_page_size }}&filters={{ current_filter }}&dir_path={{dir_path}}"><span
+                                aria-hidden="true">&laquo;</span></a>
+                    </li>
+                    {% endif %}
 
-        {% for page_num in range(1, total_pages + 1) %}
-          <li class="page-item">
-              <a class="page-link" href="?page={{ page_num }}&page_size={{ current_page_size }}&filters={{ current_filter }}&dir_path={{dir_path}}" {% if page_num == current_page %}class="active"{% endif %}>{{ page_num }}</a>
-          </li>
-        {% endfor %}
+                    {% for page_num in range(1, total_pages + 1) %}
+                    <li class="page-item">
+                        <a class="page-link"
+                            href="?page={{ page_num }}&page_size={{ current_page_size }}&filters={{ current_filter }}&dir_path={{dir_path}}"
+                            {% if page_num==current_page %}class="active" {% endif %}>{{ page_num }}</a>
+                    </li>
+                    {% endfor %}
 
-        {% if current_page < total_pages %}
-          <li class="page-item"><a class="page-link" href="?page={{ current_page + 1 }}&page_size={{ current_page_size }}&filters={{ current_filter }}&dir_path={{dir_path}}">Next</a></li>
-          <li class="page-item"><a class="page-link" href="?page={{ total_pages }}&page_size={{ current_page_size }}&filters={{ current_filter }}&dir_path={{dir_path}}">Last</a></li>
-        {% endif %}
+                    {% if current_page < total_pages %} <li class="page-item"><a class="page-link"
+                            href="?page={{ current_page + 1 }}&page_size={{ current_page_size }}&filters={{ current_filter }}&dir_path={{dir_path}}"
+                            aria-label="Next"> <span aria-hidden="true">&raquo;</span></a></li>
+                        <li class="page-item"><a class="page-link"
+                                href="?page={{ total_pages }}&page_size={{ current_page_size }}&filters={{ current_filter }}&dir_path={{dir_path}}">Last</a>
+                        </li>
+                        {% endif %}
 
-      </ul>
-    </nav>
-     <!-- Example split danger button -->
+                </ul>
+            </nav>
+        </div>
+
+        <!-- Example split danger button -->
 
     </center>
 
 </body>
+
 </html>
