--- a/logDisplayWebApp/templates/lineChart.html
+++ b/logDisplayWebApp/templates/lineChart.html
@@ -8,37 +8,59 @@
     <script defer src="{{ url_for('static', path='bootstrap/js/bootstrap.bundle.min.js') }}"></script>
     <link rel="stylesheet" href="{{ url_for('static', path='linechart.css') }}">
     <script defer id="data" type="application/json">{{summary_json | tojson}}</script>
-  <style>
-    /* Styling for the container */
-  
-  </style>
 </head>
 <body>
 
-<div  class="main_container">
-    <div id="div2" class="box2">
-        
-        <button type="button" class="btn btn-primary" onclick="zoom_refactor()">Zoom Refactor</button> <input type="number"  id="zoom-refactor">
-        <br>
-        <br>
-        <button class="btn btn-primary" onclick="increaseWidth()">Increase Width By</button><input type="number" id="incr-width">
-        <br>
-        <br>
-        <button class="btn btn-primary" onclick="decreaseWidth()">Decrease Width BY</button><input type="number" id="decr-width">
-        <br>
-        <br>
-        <button class="btn btn-primary" onclick="increaseHeight()">Increase Height By</button><input type="number" id="incr-height">
-        <br>
-        <br>
-        <button class="btn btn-primary" onclick="decreaseHeight()">Decrease Height By</button><input type="number" id="decr-height">
-        <br>
-        <br>
-        <select id="analytics_options" class="form-select">
+<div class="button-layout" >
+    <center>
+      <div class="card">
+        <div class="card-body">
+          <button type="button" class="btn btn-primary" onclick="zoom_refactor()">Zoom Refactor</button>
+          <input type="number"  id="zoom-refactor">
+        </div>
+      </div>
+      <div class="card">
+        <div class="card-body">
+          <button class="btn btn-primary" onclick="increaseWidth()">Increase Width By</button>
+          <input type="number" id="incr-width">
+        </div>
+      </div>
+      <div class="card">
+        <div class="card-body">
+          <button class="btn btn-primary" onclick="decreaseWidth()">Decrease Width BY</button>
+          <input type="number" id="decr-width">
+        </div>
+      </div>
+      <div class="card">
+        <div class="card-body">
+          <button class="btn btn-primary" onclick="increaseHeight()">Increase Height By</button>
+          <input type="number" id="incr-height">
+        </div>
+      </div>
+      <div class="card">
+        <div class="card-body">
+          <button class="btn btn-primary" onclick="decreaseHeight()">Decrease Height By</button>
+          <input type="number" id="decr-height">
+        </div>
+      </div>
+      <div class="card">
+        <div class="card-body">
+          <select id="analytics_options" class="form-select">
             {% for analytic in summary_json["analytics"] %}
             <option value="{{analytic}}">{{analytic.upper()}}</option>
             {% endfor %}
-        </select>
+          </select>
+        </div>
       </div>
+    </center>
+    
+</div>
+<div>
+  <br>
+  <br>
+</div>
+<div  class="main_container">
+    
   <!-- First div -->
   <div id="div1" class="box1">
     <div class="graph_container">
