--- a/logDisplayWebApp/templates/navigation_bar.html
+++ b/logDisplayWebApp/templates/navigation_bar.html
@@ -1,16 +1,38 @@
-<nav class="navbar navbar-expand-lg bg-primary" data-bs-theme="dark">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="/home">Matter Chip Log Viewer</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav">
-        <li class="nav-item">
-<!--          <a class="nav-link active" aria-current="page" href="/scriptExecution">Script Execution</a>-->
-          <a class="nav-link active" aria-current="page" href="/compareScriptAnalytics">Compare Script analytics</a>
-        </li>
-      </ul>
-    </div>
-  </div>
-</nav>
+<style>
+  .sidebar{
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 10%;
+    padding: 20px;
+    background-color: #3c3d3e;
+    color: #ffff;
+  }
+  .sidebar a{
+    color: #ffff;
+    font-size: medium;
+  }
+  body {
+    font-family: Arial, Helvetica, sans-serif;
+    background: rgb(185,185,185);
+    background: linear-gradient(90deg, rgb(231, 231, 231) 0%, rgba(255,251,251,1) 100%);
+}
+
+
+  .content {
+    margin-left: 250px; /* Same width as the sidebar */
+    padding: 20px;
+  }
+</style>
+<div class="sidebar">
+  <h4>Matter Chip Log Viewer</h4>
+  <ul class="nav flex-column">
+    <li class="nav-item">
+      <a class="nav-link active" href="/home">Home</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link active" href="/compareScriptAnalytics">Compare</a>
+    </li>
+  </ul>
+</div>
