--- a/logDisplayWebApp/static/tableStyles.css
+++ b/logDisplayWebApp/static/tableStyles.css
@@ -21,7 +21,7 @@ h1 {
 
 .scrollable-table {
        margin-top: 20px;
-      max-height: 238px; /* Adjust the maximum height as needed */
+      max-height: 500px; /* Adjust the maximum height as needed */
       overflow-y: auto;
       border: 1px solid #ccc;
 
@@ -63,9 +63,11 @@ table.basic-info-table td {
 /* Set a fixed width for each table */
 .table-container {
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    /* justify-content: center; */
     gap: 1%; /*  gap between tables  */
-    width: 28%;
+    /* width: 10%; */
+    margin-left: 8px;
     background-color: #fff;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     padding-bottom: 1%;
@@ -88,3 +90,53 @@ table.basic-info-table td {
             flex-wrap: wrap;
             justify-content: center; /* Center the items horizontally */
         }
+
+.main_wrapper{
+    display: flex;
+    width: 100%;
+    height: 100vh;
+    /* overflow: hidden; */
+}
+
+.main_wrapper .sidebar{
+    width: 10%;
+}
+
+.main_wrapper .main_div{
+    width: 90%;
+}
+
+.summary_table .card{
+    width: 100%!important;
+  height: 500px;
+}
+
+.summary_table .btn-group{
+    margin-right: 5px;
+}
+
+.tab_wrapper{
+    height: 100%;
+}
+
+.data_table_btn{
+    width: 150px;
+    margin-bottom: 8px;
+}
+
+#analytics_graph_id{
+    height: 500px;
+    overflow: auto;
+}
+
+html{
+    overflow: hidden;
+  }
+
+.btn_table_filter{
+    width: 120px;
+}
+
+.btn_table_filter.small_btn{
+    width: 24px;
+}
