--- a/logDisplayWebApp/templates/navigation_bar.html
+++ b/logDisplayWebApp/templates/navigation_bar.html
@@ -1,38 +1,56 @@
+<link defer rel="stylesheet" href="{{ url_for('static', path='font-awesome/css/font-awesome.min.css') }}">
+
 <style>
   .sidebar{
-    position: fixed;
+    /* position: fixed;
     top: 0;
-    left: 0;
-    height: 100%;
-    width: 10%;
+    left: 0; */
+    /* height: 100%; */
+    /* width: 10%; */
     padding: 20px;
-    background-color: #3c3d3e;
-    color: #ffff;
+    background-color: #424242;
+    color: #c1c2c3;
   }
   .sidebar a{
-    color: #ffff;
+    color: #c1c2c3;
     font-size: medium;
+    padding: auto;
   }
   body {
     font-family: Arial, Helvetica, sans-serif;
     background: rgb(185,185,185);
     background: linear-gradient(90deg, rgb(231, 231, 231) 0%, rgba(255,251,251,1) 100%);
 }
+.sidebar li:hover{
+  background-color: #acb3bb;
+  border-radius: 5px;
 
+  
+}
+.sidebar li{
+  color: #c1c2c3;
+}
 
   .content {
     margin-left: 250px; /* Same width as the sidebar */
     padding: 20px;
   }
+#matter_logo{
+  width: 80%;
+  height: 5%;
+}
+
 </style>
 <div class="sidebar">
-  <h4>Matter Chip Log Viewer</h4>
+  <img id="matter_logo" src="{{ url_for('static', path='matter.png')}}" >
+  <br>
+  <br>
   <ul class="nav flex-column">
     <li class="nav-item">
-      <a class="nav-link active" href="/home">Home</a>
+      <a class="nav-link active" href="/home"><span class="fa fa-home"></span> Home</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link active" href="/compareScriptAnalytics">Compare</a>
+      <a class="nav-link active" href="/compareScriptAnalytics"><span class="fa fa-line-chart"></span> Compare</a>
     </li>
   </ul>
 </div>
