--- a/logDisplayWebApp/templates/iterAndDutLogs.html
+++ b/logDisplayWebApp/templates/iterAndDutLogs.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="{{ url_for('static', path='linechart.css') }}">
     <script src="{{url_for('static',path='d3_js/d3.v7.min.js')}}"></script>
     <script defer id="data" type="application/json">{{summary | tojson}}</script>
-    <title>Data Table with FastAPI and Jinja2</title>
+    <title>Summary Data Table</title>
 </head>
 
 <body>
