--- a/logDisplayWebApp/templates/testScriptDisplay.html
+++ b/logDisplayWebApp/templates/testScriptDisplay.html
@@ -5,6 +5,7 @@
     <script src="{{ url_for('static', path='scriptExecute.js') }}"></script>
     <link rel="stylesheet" href="{{ url_for('static', path='bootstrap/css/bootstrap.min.css') }}">
     <script src="{{ url_for('static', path='bootstrap/js/bootstrap.bundle.min.js') }}"></script>
+    <title>Script Executor</title>
 </head>
 <body>
 {% include "navigation_bar.html" %}
