--- a/logDisplayWebApp/templates/LogSelect.html
+++ b/logDisplayWebApp/templates/LogSelect.html
@@ -5,6 +5,7 @@
         <link rel="stylesheet" type="text/css" href="{{ url_for('static', path='tableStyles.css') }}">
             <link rel="stylesheet" href="{{ url_for('static', path='bootstrap/css/bootstrap.min.css') }}">
             <link rel="stylesheet" type="text/css" href="{{ url_for('static', path='tableStyles.css') }}">
+    <title>Log Folder Selector</title>
     <script>
             function fileFetch(dir_path,dir_name){
                 window.open("/get_log_contents?file_path="+dir_path+"&file_name="+dir_name)
