--- a/logDisplayWebApp/templates/enlargedGraph.html
+++ b/logDisplayWebApp/templates/enlargedGraph.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <title>Enlarged Graph</title>
     <script src="{{url_for('static',path='d3_js/d3.v7.min.js')}}"></script>
     <script defer type="text/javascript" src="{{ url_for('static', path='enlargedGraph.js') }}"></script>
     <link rel="stylesheet" href="{{ url_for('static', path='bootstrap/css/bootstrap.min.css') }}">
