--- a/logDisplayWebApp/templates/test_cases_index.html
+++ b/logDisplayWebApp/templates/test_cases_index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="{{ url_for('static', path='bootstrap/css/bootstrap.min.css') }}">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', path='alerts.css') }}">
     <script src="{{ url_for('static', path='alerts.js') }}"></script>
-    <title>DUT Logs WebApp</title>
+    <title>Matter Chip Log viewer</title>
 </head>
 <body>
     <div class="d-flex main_wrapper">
