--- a/logDisplayWebApp/templates/iterAndDutLogs.html
+++ b/logDisplayWebApp/templates/iterAndDutLogs.html
@@ -23,14 +23,14 @@
 
         <!-- <h1>Summary of Executions</h1> -->
         <div class="row">
-            <div class="col-3">
+            <div class="col-2">
                 <div class="table-container">
                     <div id="summary-table" class="scrollable-table">
                         <table class="table summary-table table-hover">
                             <thead>
                                 <tr>
                                     <th id="title" scope="col" colspan="2">
-                                        Summary Table
+                                       Execution Summary
                                     </th>
                                 </tr>
                             </thead>
@@ -79,7 +79,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-9">
+            <div class="col-10">
                 <div class="summary_table d-flex flex-column">
                     <div>
                         <div class="d-flex justify-content-center my-2">
@@ -105,7 +105,7 @@
                                 </ul>
                             </div>
                             <div class="btn-group">
-                                <button type="button" class="btn btn-secondary btn_table_filter">Filter By</button>
+                                <button type="button" class="btn btn-secondary btn_table_filter">Filter</button>
                                 <button type="button" class="btn btn-secondary btn_table_filter  small_btn dropdown-toggle dropdown-toggle-split"
                                     data-bs-toggle="dropdown" aria-expanded="false">
                                     <span class="visually-hidden">Toggle Dropdown</span>
@@ -123,7 +123,7 @@
                                 </ul>
                             </div>
                             <div class="btn-group">
-                                <button type="button" class="btn btn-secondary" onclick="enlargedlineChart('{{dir_path}}')"> Enlarged Graph</button>
+                                <button type="button" class="btn btn-secondary" onclick="enlargedlineChart('{{dir_path}}')"> View Graph</button>
                             </div>
                         </div>
                         <div class="card overflow-x-scroll">
@@ -195,12 +195,6 @@
                                 </ul>
                             </nav>
                         </div>
-                    </div>
-                    <div id="analytics_graph_id">
-                        <div class="graph_container overflow-y-scroll">
-                            <div id="container">
-                            <p id="zoomLevel">Zoom Level: 1</p>
-                            </div>
                     </div>
                 </div>
 
