added license, updated README.md, added code for common function code to monitor pairing duration and info.

--- a/logDisplayWebApp/templates/compareScriptAnalytics.html
+++ b/logDisplayWebApp/templates/compareScriptAnalytics.html
@@ -6,11 +6,11 @@
     <script defer id="data" type="application/json">{{test_case_details | tojson}}</script>
     <link rel="stylesheet" href="{{ url_for('static', path='bootstrap/css/bootstrap.min.css') }}">
     <script src="{{ url_for('static', path='bootstrap/js/bootstrap.bundle.min.js') }}"></script>
-    <script src="{{ url_for('static', path='jquery-3.7.1.min.js') }}"></script>
+    <script src="{{ url_for('static', path='jquery/jquery-3.7.1.min.js') }}"></script>
     <script defer src="{{ url_for('static', path='compareGraphs.js') }}"></script>
     <link rel="stylesheet" href="{{ url_for('static', path='compareGraph.css') }}">
     <script src="{{url_for('static',path='d3_js/d3.v7.min.js')}}"></script>
-    <script src="{{url_for('static',path='tree.min.js')}}"></script>
+    <script src="{{url_for('static',path='tree_js/tree.min.js')}}"></script>
     <style>
         .center_div {
             display: block;
