--- a/logDisplayWebApp/templates/test_cases_index.html
+++ b/logDisplayWebApp/templates/test_cases_index.html
@@ -31,7 +31,7 @@
         <div class="main_div">
             <h1>Matter Chip Test execution log viewer</h1>
             <center>
-                <div class="card">
+                <div id="basic_info_text_case_index" class="card">
                     <table class="table table-hover">
                         <thead>
                             <tr>
