--- a/logDisplayWebApp/templates/LogSelect.html
+++ b/logDisplayWebApp/templates/LogSelect.html
@@ -35,7 +35,7 @@
     <div class="main_div ms-5">
         <h1>Multiple Log file are found choose which to display</h1>
         <center>
-            <div class="card">
+            <div id="log_select_index" class="card">
                 <table class="table table-hover">
                     <thead>
                         <tr>
