--- a/logDisplayWebApp/templates/iterAndDutLogs.html
+++ b/logDisplayWebApp/templates/iterAndDutLogs.html
@@ -108,16 +108,19 @@
                                 </button>
                                 <ul class="dropdown-menu" onchange="location = this.value;">
                                     <li><a class="dropdown-item"
-                                            href="?page={{current_page}}&page_size=10&filters={{ current_filter }}&dir_path={{dir_path}}">10</a>
+                                            href="?page={{current_page}}&page_size='10'&filters={{ current_filter }}&dir_path={{dir_path}}">10</a>
                                     </li>
                                     <li><a class="dropdown-item"
-                                            href="?page={{current_page}}&page_size=20&filters={{ current_filter }}&dir_path={{dir_path}}">20</a>
+                                            href="?page={{current_page}}&page_size='20'&filters={{ current_filter }}&dir_path={{dir_path}}">20</a>
                                     </li>
                                     <li><a class="dropdown-item"
-                                            href="?page={{current_page}}&page_size=50&filters={{ current_filter }}&dir_path={{dir_path}}">50</a>
+                                            href="?page={{current_page}}&page_size='50'&filters={{ current_filter }}&dir_path={{dir_path}}">50</a>
                                     </li>
                                     <li><a class="dropdown-item"
-                                            href="?page={{current_page}}&page_size=100&filters={{ current_filter }}&dir_path={{dir_path}}">100</a>
+                                            href="?page={{current_page}}&page_size='100'&filters={{ current_filter }}&dir_path={{dir_path}}">100</a>
+                                    </li>
+                                    <li><a class="dropdown-item"
+                                            href="?page={{current_page}}&page_size=all_rows&filters={{ current_filter }}&dir_path={{dir_path}}">All Rows</a>
                                     </li>
                                 </ul>
                             </div>
